# haberlesme_projesi

./: .clang-format  .clang-tidy  .gitignore  .~lock.KYAG_Stajer_Proje_Kontrol_ve_Rapor_Dokumani_2025_08.xlsx#  CMakeLists.txt  DEVELOPER_LOG.md  KYAG_Stajer_Proje_Kontrol_ve_Rapor_Dokumani_2025_08.xlsx  README.md  dev.ps1  dev.sh  dev_enhanced.sh  gün_sonu_raporları.txt  install_linux_service.sh  service_config.json  telemetry_packets.h
camera_ui/: CMakeLists.txt  README.md  camera_ui  camera_ui.cpp
mapping_ui/: CMakeLists.txt  README.md  mapping_ui  mapping_ui.cpp
scripts/: install_linux_service.sh
telemetry_client_library/: CMakeLists.txt  README.md  TelemetryClientConfig.cmake.in  example_client  example_client.cpp
telemetry_client_library/examples/: CMakeLists.txt  advanced_client  advanced_client.cpp  advanced_telemetry_client.cpp  command_sender  command_sender.cpp  service_config_advanced.json  simple_receiver  simple_receiver.cpp  state_management_demo  state_management_demo.cpp  subscription_demo  subscription_demo.cpp
telemetry_client_library/include/: TelemetryClient.h
telemetry_client_library/src/: DataAnalyzer.cpp  DataBuffer.cpp  FleetManager.cpp  MockUAV.cpp  TelemetryClient.cpp  TelemetryClientAdvanced.cpp
telemetry_service/: CMakeLists.txt  Config.cpp  Config.h  Logger.cpp  Logger.h  TcpManager.cpp  TcpManager.h  TelemetryPackets.h  TelemetryService.cpp  TelemetryService.h  UdpManager.cpp  UdpManager.h  ZmqManager.cpp  ZmqManager.h  main.cpp  telemetry_log.txt  telemetry_service  telemetry_service.cpp  telemetry_service.service  telemetry_test.txt
uav_sim/: CMakeLists.txt  uav_sim  uav_sim.cpp
